--- a/tedimagepicker/src/main/res/layout/activity_ted_image_picker.xml
+++ b/tedimagepicker/src/main/res/layout/activity_ted_image_picker.xml
@@ -132,6 +132,7 @@
                         style="@style/TextAppearance.AppCompat.Subhead"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:id="@+id/home_view_folders"
                         android:layout_marginStart="@dimen/default_padding_small"
                         android:ellipsize="end"
                         android:maxWidth="@dimen/ted_image_picker_album_text_max_width"
