--- a/tedimagepicker/src/main/res/layout/activity_ted_image_picker.xml
+++ b/tedimagepicker/src/main/res/layout/activity_ted_image_picker.xml
@@ -142,6 +142,7 @@
 
                     <TextView
                         style="@style/TextAppearance.AppCompat.Subhead"
+                        android:id="@+id/mediaCounter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/default_padding_small"
