--- a/tedimagepicker/src/main/res/layout/layout_done_button.xml
+++ b/tedimagepicker/src/main/res/layout/layout_done_button.xml
@@ -18,6 +18,7 @@
 
     <TextView
         style="@style/TextAppearance.AppCompat.Subhead"
+        android:id="@+id/done_button"
         android:layout_width="wrap_content"
         android:background="@{background}"
         android:layout_height="wrap_content"
