--- a/tedimagepicker/src/main/res/layout/item_gallery_media.xml
+++ b/tedimagepicker/src/main/res/layout/item_gallery_media.xml
@@ -46,8 +46,20 @@
         tools:layout_height="137dp"
         tools:layout_width="137dp">
 
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="invisible"
+                android:id="@+id/warning_view"
+                android:background="#ff0000"
+                android:text="!"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:textSize="80sp"/>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:id="@+id/item_preview"
             android:layout_height="match_parent">
 
             <ImageView
