fix build errors

--- a/tedimagepicker/src/main/res/layout/layout_done_button.xml
+++ b/tedimagepicker/src/main/res/layout/layout_done_button.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/doneButton"
             style="@style/TextAppearance.AppCompat.Subhead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
